<resources>
    <string name="app_name">Tambola Ticket Generator</string>
    <string name="alert_network_error">Network error! Try after sometime.</string>
    <string name="msg_are_you_sure_want_to_clear_hitory">Are you sure want to clear history?</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="msg_are_you_sure_want_to_delete_product_from_cart">Are you sure you want to delete product from cart?</string>
    <string name="msg_are_you_sure_want_to_delete_your_address">Are you sure want to delete address?</string>
    <string name="msg_you_can_add_only_images">Use can add only %d images.</string>
    <string name="msg_you_sure_want_to_place_an_order">Are you sure want to place an order?</string>
    <string name="msg_you_please_select_any_one_address">Please select any one address.</string>
    <string name="msg_do_you_want_to_apply_changes">Do you want to apply the changes?</string>
    <string name="msg_are_you_sure_want_to_delete_this_tracking_number">Are sure want to delete this tracking number?</string>
    <string name="msg_are_you_sure_want_to_submit_shipment">Are you sure you want to submit shipment?</string>
    <string name="msg_are_your_tracking_data_will_be_deleted">Your tracking addUpdatePlayerData will be deleted. Are you sure you want go back?</string>
    <string name="err_msg">Something went wrong, try again later.</string>
    <string name="err_msg_please_enter_your_user_name">Please enter your user name.</string>
    <string name="err_msg_username_must_be_6_10">Please enter username between 6 to 10 characters.</string>
    <string name="err_msg_please_enter_email">Please enter your email address.</string>
    <string name="err_msg_please_enter_valid_email">Please enter a valid email address.</string>
    <string name="err_msg_please_enter_password">Please enter your password.</string>
    <string name="err_msg_please_enter_name">Please enter your name.</string>
    <string name="err_msg_please_enter_address">Please enter your address.</string>
    <string name="err_msg_please_enter_mobile">Please enter your mobile.</string>
    <string name="err_msg_please_select_city">Please select your city.</string>
    <string name="err_msg_please_select_region">Please select your region.</string>
    <string name="err_msg_please_enter_confirm_password">Please enter your confirm password.</string>
    <string name="err_msg_password_and_confirm_password_not_matched">Password and confirm password must be same.</string>
    <string name="err_msg_password_should_be_between_4_to_20">Please enter password in 6 to 20 character range.</string>
    <string name="err_msg_password_7_more">Please enter password 7 or more characters.</string>
    <string name="err_msg_password_must_be_alpha_numeric">Password should contain both numeric and alphabetic characters.</string>
    <string name="err_msg_please_enter_telephone_number">Please enter your telephone number.</string>
    <string name="err_msg_please_enter_your_address">Please enter your address.</string>
    <string name="err_msg_please_enter_product_name">Please enter product name.</string>
    <string name="err_msg_please_select_category">Please select category.</string>
    <string name="err_msg_please_enter_product_desc">Please enter product description.</string>
    <string name="err_msg_please_enter_product_price">Please enter valid product price.</string>
    <string name="err_msg_please_enter_product_qnt">Please enter valid product quantity.</string>
    <string name="err_msg_please_enter_product_barcode">Please enter valid product barcode.</string>
    <string name="err_msg_please_enter_product_size">Please enter product size.</string>
    <string name="err_msg_please_enter_product_color">Please enter product color.</string>
    <string name="err_msg_please_select_product_pieces">Please select product pieces.</string>
    <string name="err_msg_please_select_destination_contry">Please select destination country.</string>
    <string name="err_msg_please_enter_city">Please enter city.</string>
    <string name="err_msg_please_enter_business_email_address">Please enter business email address.</string>
    <string name="err_msg_please_enter_valid_business_email_address">Please enter a valid business email address.</string>
    <string name="err_msg_please_enter_contact_number">Please enter contact number.</string>
    <string name="err_msg_please_check_internet">Please check your network connection.</string>
    <string name="err_msg_please_select_price_rating">Please select price rating.</string>
    <string name="err_msg_please_select_delivery_rating">Please select delivery rating.</string>
    <string name="err_msg_please_select_quality_rating">Please select quality rating.</string>
    <string name="err_msg_please_enter_title_of_review">Please enter title of review.</string>
    <string name="err_msg_please_enter_detail_review">Please enter detail review.</string>
    <string name="err_msg_please_enter_a_valid_telephone_number">Please enter a valid telephone number.</string>
    <string name="err_msg_please_select_country_code">Please select country code.</string>
    <string name="err_msg_please_enter_your_current_password">Please enter your current password.</string>
    <string name="err_msg_please_enter_your_new_password">Please enter your new password.</string>
    <string name="err_msg_new_password_and_confirm_password_not_matched">New password and confirm password must be same.</string>
    <string name="err_msg_new_password_should_be_between_4_to_20">Please enter new password in 6 to 20 character range.</string>
    <string name="err_msg_please_select_your_shipping_address">Please select your shipping address.</string>
    <string name="err_msg_please_select_your_billing_address">Please select your billing address.</string>
    <string name="err_msg_please_enter_your_message">Please enter your message.</string>
    <string name="err_msg_please_enter_your_comment">Please enter your comment.</string>
    <string name="err_msg_permission_required_for_furthur_process">Permission is required for further process.</string>
    <string name="err_msg_please_select_valid_date">Please select valid date.</string>
    <string name="err_msg_allowed_formats_are_png_and_jpg">Allowed formats are PNG and JPG.</string>
    <string name="err_msg_please_enter_your_zip_code">Please enter your zip/postal code.</string>
    <string name="err_msg_please_enter_a_valid_zip_code">Please enter a valid zip/postal code.</string>
    <string name="err_msg_please_enter_your_street_address">Please enter your street address.</string>
    <string name="err_msg_please_select_carrier">Please select carrier.</string>
    <string name="err_msg_please_enter_tracking_number">Please enter tracking number.</string>
    <string name="lbl_society_address">Address</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_don_t_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="lbl_add_customer">Add Player</string>
    <string name="lbl_update_customer">Update Player</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_best_deals">Best Deals</string>
    <string name="lbl_create_relaxing_life">Create a relaxing life</string>
    <string name="lbl_new_arrival">New Arrival</string>
    <string name="lbl_hot_selling">Hot Selling</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_view_all">View all</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_first_name_address">Name*</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_flat_address">Flat/House/Office No.*</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_country_address">Country*</string>
    <string name="lbl_region">Region</string>
    <string name="lbl_view_detail">View Detail</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_already_have_an_account">Already have an account?</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_telephone">Telephone</string>
    <string name="lbl_telephone_address">Telephone*</string>
    <string name="lbl_fill_in_the_following_information_to_receive_better_service">Fill in the following information to receive better service</string>
    <string name="lbl_sign_up_successful">Sign Up Successful!</string>
    <string name="lbl_select_country">Select Country</string>
    <string name="lbl_select_country_code">Select Country Code</string>
    <string name="lbl_select_state">Select State</string>
    <string name="tab_product_detail">Product Detail</string>
    <string name="tab_descriptions">Descriptions</string>
    <string name="tab_specification">Specification</string>
    <string name="tab_reviews">Reviews</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam magna metus, facilisis sed pretium vel, consequat at velit. Aenean in elit leo. Fusce ut hendrerit metus. Aliquam egestas posuere libero, vitae bibendum purus dapibus eget. Integer elementum accumsan feugiat. Donec nec posuere eros. Suspendisse potenti. Nulla faucibus purus sed nunc consequat vulputate.

\n\nVivamus vitae nulla vestibulum, accumsan risus a, fringilla lacus. Nullam fringilla eleifend tortor, non gravida felis convallis id. Integer rutrum nibh sit amet mauris congue pellentesque. Proin tincidunt enim eget lacinia tincidunt. Morbi sollicitudin feugiat elit, at tempor dui varius sit amet. Nullam et metus vitae mauris egestas finibus. Vestibulum ac fermentum sapien, rutrum rhoncus massa. Phasellus luctus ullamcorper vulputate.

\n\nPellentesque nec nisi non nulla tincidunt venenatis. Cras et augue imperdiet, dictum risus ac, consequat dui. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris consectetur augue magna, id ultricies lorem commodo at. Donec eget mauris porttitor, vestibulum leo eget, laoreet tortor. Praesent laoreet egestas euismod. Praesent a nisl euismod, lacinia dolor eget, aliquam eros. Curabitur imperdiet nibh nunc. Sed vel auctor nisl. Mauris viverra justo at urna condimentum malesuada. Nullam sed aliquam diam. Nulla facilisi.</string>
    <string name="lbl_payment_protection">Payment\nProtection</string>
    <string name="lbl_quality_protection">Product Quality\nProtection</string>
    <string name="lbl_on_time_protection">On-Time\nShipment</string>
    <string name="str_alphabet_serial_index">Alphabet Serial Index: %s</string>
    <string name="str_created_at">Created at: %s</string>
    <string name="str_update_at">Update at: %s</string>
    <string name="str_column_title">Column title: %s</string>
    <string name="str_column_id">Column Id: %d</string>
    <string name="str_to_serial">To Serial: %d</string>
    <string name="str_created_by_id">Created by: %s</string>
    <string name="str_from_serial">From Serial: %d</string>
    <string name="str_player_id">Player Name: %s</string>
    <string name="str_serial_id">Serial Id: %d</string>
    <string name="str_id">Id: %d</string>
    <string name="str_amount">Amount: %d</string>
    <string name="str_ticket_title">Ticket Title: %s</string>
    <string name="str_transaction_id">Transaction Id: %s</string>
    <string name="str_game_on">Game On: %s</string>
    <string name="str_paid_by">Paid By: %s</string>
    <string name="description">Description:</string>
    <string name="type">Type: %s</string>
    <string name="recharged_by_wallet">Recharged by: %s</string>
    <string name="recharged_at">Recharged at: %s</string>
</resources>